--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -17,6 +17,8 @@
       <input type="password" name="password" id="password" />
       <br />
 
+      <input type="hidden" name="redirect_uri" value="{{.RedirectURI}}" />
+
       <input type="submit" value="Login" />
     </form>
 
